lesson23/07_all_for_diagnostics.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostic
  namespace: dev
spec:
  serviceAccountName: diagnostic-sa
  containers:
    - name: diagnostic
      image: curlimages/curl
      command:
        - sh
        - -c
        - |
          TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)

          curl \
            --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt \
            -H "Authorization: Bearer $TOKEN" \
            "https://kubernetes.default.svc/api/v1/namespaces/dev/pods?labelSelector=app%3Dwordpress"
  restartPolicy: Never
